--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Lina Bakery</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="produk.html">Produk</a>
             <a href="layanan.html">Layanan</a>
             <a href="pemesanan.html">Pemesanan</a>
